[project]
name = "plate-stitch"
version = "0.1.0"
description = "Label and stitch Operetta plate images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tifffile>=2025.10.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plate_stitch"]
